# azure-ai-search-agentic-retrieval

./: .gitignore  README.md  article.md  azure-ai-search-jqara.ipynb  azure-openai-jdocqa.ipynb  pyproject.toml
articles/: ch1.md  ch10.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md  prologue.md  summary.md
